# kokoro-MLX-blender

./: .gitignore  LICENSE  README.md  pyproject.toml
kb_mlx/: app.py  cli.py
